swagger for login, signup, password rest request, password reset and email verification works | update profile not working
