# go-app/docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is the API documentation for DevConnect.",
-        "title": "DevConnect API",
+        "description": "This is the API documentation for user api.",
+        "title": "User API fro cc tech project",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
@@ -17,6 +17,58 @@
     "host": "localhost:5000",
     "basePath": "/api",
     "paths": {
+        "/users/login": {
+            "post": {
+                "description": "Authenticates a user with email and password, returning access and refresh tokens",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Login"
+                ],
+                "summary": "User login",
+                "parameters": [
+                    {
+                        "description": "Login request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input or bad request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "401": {
+                        "description": "Invalid credentials or unverified email",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to query user or generate tokens",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
         "/users/register": {
             "post": {
                 "description": "Register a new user with the provided details",
@@ -27,7 +79,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "users Registration"
                 ],
                 "summary": "Register a new user",
                 "parameters": [
@@ -63,6 +115,110 @@
                 }
             }
         },
+        "/users/reset-password": {
+            "post": {
+                "description": "Send a password reset token to the user's email address if they have a verified email.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Password Reset Request"
+                ],
+                "summary": "sending Reset password request",
+                "parameters": [
+                    {
+                        "description": "Password Reset Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.PasswordResetRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Password reset request success",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResetRequestOutput"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - Invalid credentials or unverified email",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/update-password": {
+            "post": {
+                "description": "Send a password reset token to the user's email address if they have a verified email.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reset Password"
+                ],
+                "summary": "Reset password",
+                "parameters": [
+                    {
+                        "description": "Password Reset Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.UpdatePasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Password reset request success",
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdatePasswordResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - Invalid credentials or unverified email",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
         "/users/verify-email": {
             "post": {
                 "description": "Verifies a user's email by checking the verification token and updating the user's status.",
@@ -73,7 +229,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "User Verification"
                 ],
                 "summary": "Verify user email",
                 "parameters": [
@@ -135,6 +291,25 @@
                 }
             }
         },
+        "models.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "user": {
+                    "$ref": "#/definitions/models.UserResponse"
+                }
+            }
+        },
+        "models.ResetRequestOutput": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "models.SignedUpUserOutput": {
             "type": "object",
             "properties": {
@@ -154,6 +329,37 @@
                     "type": "string"
                 },
                 "userName": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdatePasswordResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "refreshToken": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "token": {
                     "type": "string"
                 }
             }
@@ -180,6 +386,38 @@
                             "type": "integer"
                         },
                         "verification_token": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "requests.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "input": {
+                    "type": "object",
+                    "properties": {
+                        "email": {
+                            "type": "string"
+                        },
+                        "password": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "requests.PasswordResetRequest": {
+            "type": "object",
+            "properties": {
+                "input": {
+                    "type": "object",
+                    "required": [
+                        "email"
+                    ],
+                    "properties": {
+                        "email": {
                             "type": "string"
                         }
                     }
@@ -216,6 +454,31 @@
                         },
                         "userName": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "requests.UpdatePasswordRequest": {
+            "type": "object",
+            "properties": {
+                "input": {
+                    "type": "object",
+                    "required": [
+                        "password",
+                        "token",
+                        "userId"
+                    ],
+                    "properties": {
+                        "password": {
+                            "type": "string",
+                            "minLength": 6
+                        },
+                        "token": {
+                            "type": "string"
+                        },
+                        "userId": {
+                            "type": "integer"
                         }
                     }
                 }
